--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -17,11 +17,30 @@
     #cutive {
     font-family: 'Cutive Mono', monospace;
     }
+    .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+    }
+    .item {
+      flex-grow: 10;
+      flex-shrink: 1;
+      flex-basis: auto;
 
+    }
+    ul {
+    font-family: 'VT323', monospace;
+    }
 
     </style>
   </head>
   <body>
-
+    <ul class="container">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Contact</a></li>
+</ul>
   </body>
 </html>
