Added HTML Lab 2

--- a/Code/darren/html_lab1.html
+++ b/Code/darren/html_lab1.html
@@ -83,11 +83,11 @@
         <div id="biodiv">
           <h2>Family and Given Name</h2>
             <li>Pinyin: Sīmǎ (<i>Family</i>) Qiān (<i>Given</i>)</li>
-            <li>Traditional: 司馬遷</li>
+            <li>Traditional: <ruby>司馬遷<rp>(</rp><rt>Sī Mǎ Qiān</rt><rp>)</rp></ruby></li>
             <li>Wade-Giles: Ssŭ-ma Ch'ien</li>
           <h3>Style Name</h3>
             <li>Pinyin: Zǐzhǎng</li>
-            <li>Traditional: 子長</li>
+            <li>Traditional: <ruby>子長<rp>(</rp><rt>Zǐ Zhǎng</rt><rp>)</rp></ruby></li>
             <li>Wade-Giles: Tzu-chang</li>
           <h3>Residences</h3>
             <li>Xiayang (<i>Near modern Hancheng</i>), Chang'an (<i>present day Xi'an</i>)
