Updated HTML Lab 2

--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -1,80 +1,116 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Duck and Cover</title>
+    <link href="https://fonts.googleapis.com/css?family=Atomic+Age" rel="stylesheet">
     <style type="text/css">
-    body {
-      background-color: orange
-    }
-    .container {
-      display: grid;
-      background-color: orange;
-      grid-template-columns: 25% 25% 25% 25%;
-      grid-template-rows: 15% 100% 15%;
-      grid-template-areas:
-        "header header header header"
-        "main main main sidebar"
-        "footer footer footer footer";
-      padding-left: 1%;
-      padding-right: 1%;
-      padding-top: 1%;
-      padding-bottom: 1%;
-    }
-    .header {
-      grid-area: "header";
-      background-color: grey;
-      grid-column-start: 1;
-      grid-column-end: 5;
-      grid-row-start: 1;
-      grid-row-end: 2;
-    }
-    .main {
-      grid-area: "main";
-      background-color: brown;
-      grid-row-start: 2;
-      grid-row-end: 4;
-      grid-column-start: 1;
-      grid-column-end: 4;
-    }
-    .sidebar {
-      grid-area: "sidebar";
-      background-color: yellow;
-      grid-row-start: 2;
-      grid-row-end: 4;
-      grid-column-start: 4;
-      grid-column-end: 5;
-    }
-    .footer {
-      grid-area: "footer";
-      background-color: lightblue;
-      grid-row-start: 4;
-      grid-row-end: 5;
-      grid-column-start: 1;
-      grid-column-end: 5;
-    }
-    #navigator {
-      border-radius: 25px;
-      border: 2px transparent black;
-      padding-left: 15%;
-      text-align: left
-    }
+      body {
+        background-image: url("googie_turq_400.jpg");
+      }
+      .container {
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 15% 70% 15%;
+        grid-template-areas:
+          "header header header header"
+          "main main main sidebar"
+          "footer footer footer footer";
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+      }
+      .header {
+        grid-area: "header";
+        background-image: url("doodle_turq_400.jpg");
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        border-radius: 25px;
+        border: 2px solid #FF5EA0;
+        padding-left: 3%;
+        font-family:'Atomic Age', serif;
+        font-size: 20px;
+        color:#B5095F;
+      }
+      .main {
+        grid-area: "main";
+        grid-row-start: 2;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 4;
+      }
+      #blog_posts {
+        display: flex;
+        flex-direction: column;
+        align-content: space-around;
+      }
+      #blog_posts > div {
+        border-radius: 25px;
+        border: 2px transparent black;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        text-align: left;
+        background-image:url("stars.jpg");
+      }
+      .sidebar {
+        grid-area: "sidebar";
+        grid-row-start: 2;
+        grid-row-end: 4;
+        grid-column-start: 4;
+        grid-column-end: 5;
+        background-image:url("starbursts.jpg");
+        font-family:'Atomic Age', serif;
+        font-size: 20px;
+        color:#B5095F;
+      }
+      .footer {
+        grid-area: "footer";
+        background-color: lightblue;
+        grid-row-start: 4;
+        grid-row-end: 5;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        border-radius: 25px;
+        border: 2px solid #FF5EA0;
+        padding-left: 3%;
+      }
+      #navigator {
+        border-radius: 25px;
+        border: 2px solid #FF5EA0;
+        padding-left: 15%;
+        text-align: left
+      }
     </style>
   </head>
   <body>
     <div class="container" id="frame">
-      <header class="header" id="title"><h1>Header</h1></header>
+      <header class="header" id="title"><h1>DUCK and COVER</h1></header>
       <article class="main" id="blog_posts">
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-        <p>With pretty stories for which there's little good evidence Cambrian explosion vanquish the impossible emerged into consciousness nisi ut aliquid ex ea commodi consequatur sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem? Sea of Tranquility sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo astonishment gathered by gravity from which we spring and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
-        <p>From Emma manner Golden Thing seemed these malady dimensions youth. Come that hieroglyphics Briden word party entirely come waterfront listened? Himself about only seems aeons second overtake green Wilcox period! Johansen halting there matter Wilcox island Egeberg fever bas-reliefs from? Things—in frightful visions geologists reeling surfaces—surfaces monstrosity laughing incalculable turned. Everyone pieced unknown come cloud cult plasticity little galleon manage? Falling theosophists accursed appear bursting wife whirling from record helped? This thorough subterrene down dream occurred mental home when dismissed!</p>
-        <p>In the works of Stone, a predominant concept is the distinction between ground and figure. Thus, if the predialectic paradigm of consensus holds, we have to choose between feminism and neomaterialist cultural theory. Bataille’s critique of pretextual theory suggests that reality serves to exploit minorities.It could be said that Lyotard uses the term ‘neotextual constructive theory’ to denote the common ground between society and class. The subject is interpolated into a predialectic paradigm of consensus that includes sexuality as a whole. Thus, Lacan suggests the use of subpatriarchialist textual theory to read and modify society.</p>
+          <div id="bp1">
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          </div>
+          <div id="bp2">
+            <p>With pretty stories for which there's little good evidence Cambrian explosion vanquish the impossible emerged into consciousness nisi ut aliquid ex ea commodi consequatur sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem? Sea of Tranquility sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo astonishment gathered by gravity from which we spring and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
+          </div>
+          <div id="bp3">
+            <p>From Emma manner Golden Thing seemed these malady dimensions youth. Come that hieroglyphics Briden word party entirely come waterfront listened? Himself about only seems aeons second overtake green Wilcox period! Johansen halting there matter Wilcox island Egeberg fever bas-reliefs from? Things—in frightful visions geologists reeling surfaces—surfaces monstrosity laughing incalculable turned. Everyone pieced unknown come cloud cult plasticity little galleon manage? Falling theosophists accursed appear bursting wife whirling from record helped? This thorough subterrene down dream occurred mental home when dismissed!</p>
+          </div>
+          <div id="bp4">
+            <p>In the works of Stone, a predominant concept is the distinction between ground and figure. Thus, if the predialectic paradigm of consensus holds, we have to choose between feminism and neomaterialist cultural theory. Bataille’s critique of pretextual theory suggests that reality serves to exploit minorities.It could be said that Lyotard uses the term ‘neotextual constructive theory’ to denote the common ground between society and class. The subject is interpolated into a predialectic paradigm of consensus that includes sexuality as a whole. Thus, Lacan suggests the use of subpatriarchialist textual theory to read and modify society.</p>
+          </div>
       </article>
       <aside class="sidebar" id="navigator">
         <ul>
-          <h2>Aside</h2>
-          <li>hi</li>
-          <li>i</li>
-          <li>a</li>
-          <li>list</li>
+          <h2>Years</h2>
+          <li>2016</li>
+          <li>2017</li>
+          <li>2018</li>
+          <li>2019</li>
+          <li>2020</li>
         </ul>
       </aside>
       <footer class="footer" id="links">Footer
