--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -64,13 +64,12 @@
         margin-bottom: 3%;
         background-image:url("starbursts.jpg");
         font-family:'Atomic Age', serif;
-        font-size: 20px;
+        font-size: 12px;
         color:#B5095F;
         border-radius: 25px;
         border: 2px solid #FF5EA0;
-        padding-left: 15%;
         text-align: left;
-        float: left;
+        padding-right: 3%;
         filter: drop-shadow(0px 5px 4px purple)
       }
       .footer {
@@ -107,6 +106,11 @@
         width: 150px;
         float: left;
       }
+      @media (min-width: 600px) { .sidebar
+        {font-size:20px
+        }
+      }
+
     </style>
   </head>
   <body>
