Updated HTML Lab 2

--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -69,6 +69,7 @@
         border-radius: 25px;
         border: 2px solid #FF5EA0;
         text-align: left;
+        padding-left:10%;
         padding-right: 3%;
         filter: drop-shadow(0px 5px 4px purple)
       }
@@ -106,8 +107,8 @@
         width: 150px;
         float: left;
       }
-      @media (min-width: 600px) { .sidebar
-        {font-size:20px
+      @media (min-width: 600px) { .sidebar {
+        font-size:20px;
         }
       }
 
@@ -136,14 +137,12 @@
           </div>
       </article>
       <aside class="sidebar" id="navigator">
-        <ul>
           <h1>Years</h1>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2016</a></li>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2017</a></li>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2018</a></li>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2019</a></li>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2020</a></li>
-        </ul>
       </aside>
       <footer class="footer" id="links">Footer
         <a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">Ne Cede Malis</a>
