--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -73,7 +73,7 @@
     padding: 40px;
     background-color: #05ffa150;
     border-radius: 20px;
-    box-shadow: 10px 10px;
+    box-shadow: 10px 10px #a5b0ad91);
     }
 
 </style>
