--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -18,15 +18,17 @@
     .cutive {
     font-family: 'Cutive Mono', monospace;
     }
-    #logo {
-      justify-self: start;
-      height: 100px;
+    .logo {
+      margin-right: auto;
+      margin-left: 10px;
+      height: 130px;
     }
     .header {
       display: flex;
-      /* flex-direction: row; */
-      justify-content: center;
+      flex-direction: row;
+      justify-content:space-around;
       align-items: center;
+      /* align-self: center; */
       background-color: #01cdfe30;
       /* height: auto;
       width: 100%; */
@@ -39,16 +41,18 @@
     .sidebar {
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: flex-start;
       align-items: center;
       background-color: #ff71ce80;
-      width: 100px;
-      height: 100%;
+      width: 150px;
     }
     .sidebar-item {
-      display: flex;
+      padding-top: 25px;
       flex-shrink: 0;
       flex-basis: auto;
+      font-family: 'VT323', monospace;
+      font-size: 4em;
+      color: #ffd35a;
     }
     html {
       height: 100%;
@@ -62,7 +66,7 @@
     font-family: 'VT323', monospace;
     }
     .bottomright {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     right: 0px;
     height: 100px;
@@ -71,9 +75,10 @@
     .content {
     margin: 40px;
     padding: 40px;
-    background-color: #05ffa150;
-    border-radius: 20px;
-    box-shadow: 10px 10px #a5b0ad91);
+    background-color: #05ffa140;
+    box-shadow: 10px 10px #a5b0ad91;
+    width: 70%
+    /* height:auto; */
     }
 
 </style>
@@ -81,17 +86,19 @@
 <body>
 
   <div class="header">
-    <img id="logo" src="images/vasun.png" alt="Blog">
+    <img class="logo" src="images/vasun.png" alt="Blog">
     <img src="images/blogtitle.png" alt="">
   </div>
-  <div style="display:flex;flex-direction:row">
+  <div style="display:flex;flex-direction:row;height:100%">
     <div class="sidebar">
       <div class="sidebar-item">Link1</div>
       <div class="sidebar-item">Link2</div>
       <div class="sidebar-item">Link3</div>
     </div>
     <div class="content">
-      <p class="content">Just a test?</p>
+      <p class="ptmono">
+      Straightnin' the curves. Flatnin' the hills Someday the mountain might get ‘em but the law never will. In 1972 a crack commando unit was sent to prison by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. Were gonna do it. Give us any chance well take it. Give us any rule we'll break it. We're gonna make our dreams come true! Believe it or not I'm walking on air. I never thought I could feel so free. Flying away on a wing and a prayer. Who could it be? Believe it or not its just me. Well we're movin' on up to the east side. To a deluxe apartment in the sky. Its mission - to explore strange new worlds to seek out new life and new civilizations to boldly go where no man has gone before. Well we're movin' on up to the east side. To a deluxe apartment in the sky. Sunday Monday Happy Days. Tuesday Wednesday Happy Days. Thursday Friday Happy Days.Saturday what a day. Groovin' all week with you? Well the first thing you know ol' Jeds a millionaire. Kinfolk said Jed move away from there.
+      Baby if you've ever wondered - wondered whatever became of me. I'm living on the air in Cincinnati. Cincinnati WKRP. Here's the story of a lovely lady who was bringing up three very lovely girls. All of them had hair of gold like their mother the youngest one in curls., Doin' it our way. There's nothing we wont try. Never heard the word impossible. This time there's no stopping us. The first mate and his Skipper too will do their very best to make the others comfortable in their tropic island nest. Then one day he was shootin' at some food and up through the ground came a bubblin' crude. Oil that is. The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the millionaire and his wife.</p>
     </div>
   </div>
   <img class="bottomright" src="images/palmtree.png" alt="">
