--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Major+Mono+Display|PT+Mono|VT323" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ａｅｓｔｈｅｔｉｃ</title>
+    <title>ｆｌｅｘ　ス・き</title>
     <style type="text/css">
     .major {
     font-family: 'Major Mono Display', monospace;
