--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -20,7 +20,7 @@
     }
     .logo {
       margin-right: auto;
-      margin-left: 10px;
+      margin-left: 25px;
       height: 130px;
     }
     .header {
@@ -43,16 +43,16 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      background-color: #ff71ce80;
-      width: 150px;
+      background-color: #ff71ce;
+      width: 370px;
     }
     .sidebar-item {
       padding-top: 25px;
       flex-shrink: 0;
       flex-basis: auto;
       font-family: 'VT323', monospace;
-      font-size: 4em;
-      color: #ffd35a;
+      font-size: 3em;
+      text-shadow: 2px 1px black;
     }
     html {
       height: 100%;
@@ -63,22 +63,25 @@
       background-image: url("images/vwbg.jpg");
     }
     ul {
-    font-family: 'VT323', monospace;
+      font-family: 'VT323', monospace;
+    }
+    a:link {
+      color: #ffd35a;
     }
     .bottomright {
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
-    height: 100px;
-    opacity: 0.8;
+      position: fixed;
+      bottom: 0px;
+      right: 0px;
+      height: 100px;
+      opacity: 0.8;
     }
     .content {
-    margin: 40px;
-    padding: 40px;
-    background-color: #05ffa140;
-    box-shadow: 10px 10px #a5b0ad91;
-    width: 70%
-    /* height:auto; */
+      margin: 40px;
+      padding: 40px;
+      background-color: #05ffa140;
+      box-shadow: 10px 10px #a5b0ad91;
+      width: 70%
+      /* height:auto; */
     }
 
 </style>
@@ -89,16 +92,29 @@
     <img class="logo" src="images/vasun.png" alt="Blog">
     <img src="images/blogtitle.png" alt="">
   </div>
-  <div style="display:flex;flex-direction:row;height:100%">
+  <div style="display:flex;flex-direction:row;">
     <div class="sidebar">
-      <div class="sidebar-item">Link1</div>
-      <div class="sidebar-item">Link2</div>
-      <div class="sidebar-item">Link3</div>
+      <div class="sidebar-item"><a href="a.html">About</a></div>
+      <div class="sidebar-item"><a href="b.html">Bears</a></div>
+      <div class="sidebar-item"><a href="c.html">Code</a></div>
+      <div class="sidebar-item"><a href="d.html">Doors</a></div>
+      <div class="sidebar-item"><a href="e.html">Earth</a></div>
     </div>
-    <div class="content">
-      <p class="ptmono">
-      Straightnin' the curves. Flatnin' the hills Someday the mountain might get ‘em but the law never will. In 1972 a crack commando unit was sent to prison by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. Were gonna do it. Give us any chance well take it. Give us any rule we'll break it. We're gonna make our dreams come true! Believe it or not I'm walking on air. I never thought I could feel so free. Flying away on a wing and a prayer. Who could it be? Believe it or not its just me. Well we're movin' on up to the east side. To a deluxe apartment in the sky. Its mission - to explore strange new worlds to seek out new life and new civilizations to boldly go where no man has gone before. Well we're movin' on up to the east side. To a deluxe apartment in the sky. Sunday Monday Happy Days. Tuesday Wednesday Happy Days. Thursday Friday Happy Days.Saturday what a day. Groovin' all week with you? Well the first thing you know ol' Jeds a millionaire. Kinfolk said Jed move away from there.
-      Baby if you've ever wondered - wondered whatever became of me. I'm living on the air in Cincinnati. Cincinnati WKRP. Here's the story of a lovely lady who was bringing up three very lovely girls. All of them had hair of gold like their mother the youngest one in curls., Doin' it our way. There's nothing we wont try. Never heard the word impossible. This time there's no stopping us. The first mate and his Skipper too will do their very best to make the others comfortable in their tropic island nest. Then one day he was shootin' at some food and up through the ground came a bubblin' crude. Oil that is. The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the millionaire and his wife.</p>
+    <div class="content-container">
+    <div class="content ptmono">
+   <h1>We need rest. The spirit is willing, but the flesh is spongy and bruised.</h1>
+<p>Bender, being God isn't easy. If you do too much, people get dependent on you, and if you do nothing, they lose hope. You have to use a light touch. Like a safecracker, or a pickpocket. Meh. We're rescuing ya.</p>
+<p>Oh, you're a dollar naughtier than most. The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. <strong> Checkmate.</strong> <em> Why am I sticky and naked?</em> Did I miss something fun?</p>
+<h2>Do a flip!</h2>
+<p>Fatal. It's okay, Bender. I like cooking too. Soon enough. Ooh, name it after me! Fry! Stay back! He's too powerful! Hello Morbo, how's the family?</p>
+<ol>
+
+    <li>Oh yeah, good luck with that.</li><li>And yet you haven't said what I told you to say! How can any of us trust you?</li><li>Humans dating robots is sick. You people wonder why I'm still single? It's 'cause all the fine robot sisters are dating humans!</li>
+
+</ol>
+
+<h3>This opera's as lousy as it is brilliant! Your lyrics lack subtlety. You can't just have your characters announce how they feel. That makes me feel angry!</h3>
+<p>Tell them I hate them. Why did you bring us here? I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. Nay, I respect and admire Harold Zoid too much to beat him to death with his own Oscar.</p>
     </div>
   </div>
   <img class="bottomright" src="images/palmtree.png" alt="">
