--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -19,10 +19,10 @@
     font-family: 'Cutive Mono', monospace;
     }
     .logo {
-      /* margin-right: auto; */
-      /* margin-left: 25px; */
+      margin-right: auto;
+      margin-left: 25px;
       height: 130px;
-      flex: 1;
+      /* flex: 1; */
     }
     .header {
       display: flex;
