update font color

--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -11,6 +11,7 @@
     }
     .ptmono {
     font-family: 'PT Mono', monospace;
+    color:#261e30;
     }
     .VT323 {
     font-family: 'VT323', monospace;
@@ -47,7 +48,7 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      background-color: #ff71ce;
+      background-color: #ff71ce90;
       width: 370px;
     }
     .sidebar-item {
